# living-looper

./: .gitignore  .gitmodules  README.md  export.py  ipls.py  loop.py  mkdocs.yml  model.py  pyproject.toml  representation.py  transform.py
docs/: index.md
living-looper-core/: LLModel.hpp  Resampler.hpp
src/livinglooper/: __main__.py  dummy.py  export.py  loop.py  model.py  representation.py  tfr.py
