[tool.poetry]
name = "livinglooper"
version = "0.1.0"
description = "The Living Looper is a software musical instrument using neural synthesis."
authors = ["Victor Shepardson <victor.shepardson@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = ">=1.13,<2.3"
numpy = "^1.23"
tqdm = "^4.64"
nn-tilde = "^1.5.6"
termcolor = "^2.5.0"
fire = "^0.7.0"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.29.0"}
mkdocs-gen-files = "^0.5.0"
mkdocs-include-markdown-plugin = "^6.0.4"
mkdocs-material = "^9.4.8"
mkdocs-material-extensions = "^1.3"
mkdocs-autorefs = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
livinglooper = 'livinglooper.__main__:_main'
